@@ -21,6 +21,47 @@ JavaFX
 java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar REALEASE/codingweek-01-RELEASE_DAY_1.jar 
 ```
 
+#### Jour 2
+
+```bash
+java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar REALEASE/codingweek-01-RELEASE_DAY_2.jar 
+```
+
+**Voici différents scénarios :**
+* À l'écran de connexion :
+  * *Vous avez un problème*
+    * Cliquer sur "Nous contacter"
+    * Remplir le formulaire : décrire le problème
+    * Envoyer le formulaire
+    * Le formulaire sera envoyé à l'administration et vous serez redirigé.e sur la page de connexion
+  * *Vous voulez créer un compte*
+    * Cliquer sur "Créer un compte"
+    * Renseigner ses informations
+    * Créer le compte : vous serez redirigéé.e sur la page de connexion
+  * *Vous avez un compte*
+    * Entrez vos informations comme sur n'importe quelle application.
+* Sur la page principale : "Hub"
+  * *Vous voulez déposer une annonce*
+    * Cliquer sur "Déposer une offre"
+    * Remplir le formulaire
+    * L'annonce sera ajoutée à la base de données
+  * *Vous voulez trouver une annonce*
+    * Cliquer sur "Chercher une annonce"
+    * TODO
+  * *Vous pouvez consulter vos notifications*
+* Utiliser le menu en haut à droite de la page pour accéder à différentes pages
+* Sur la page "Profil"
+  * Consulter les différentes informations du compte
+  * Consulter son planning à l'aide du bouton "Mon Planning"
+  * Consulter ses offres à l'aide du bouton "Mes Offres"
+  * Modifier les informations du compte à l'aide du bouton "Modifier le profil"
+    * Il faut entrer toutes les informations à nouveau
+* Sur la page "Mes Chats"
+  * TODO
+* Sur la page "Administration" (accessible uniquement si le compte est administrateur)
+  * Consulter les différentes réclamations faites par les utilisateurs
+  * Indiquer lesquelles sont résolues.
+
 ## Planning
 
 - 8/1/24
